[package]
name = "workflow-jobs"
version = "0.1.1"
edition = "2021"
description = "Parse GitHub Action workflow definitions into job names"
authors = ["Roman Volosatovs"]
repository = "https://github.com/rvolosatovs/workflow-jobs"
license = "MIT"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
